--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /Juego base/nbproject/private/
 /Juego/build/
 /Juego/dist/
+Juego/Imagenes/Animaciones/Sprites/mini_sprites_de_ocs_de_pokemon_agora_by_alb_burguete-d65kwhi.png
